calorie intake doc and fixing
